--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=80
 spring.thymeleaf.prefix = classpath:/static/
 spring.resources.static-locations = classpath:/static/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.mode=html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
