服务提供者,日志入库功能实现

--- a/blog/blog-provider/src/main/resources/application.yml
+++ b/blog/blog-provider/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 80
+  port: 8080
 spring:
   application:
-    name: blog-provider
+    name: blog-provider # 服务名
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://39.106.70.195:3306/myproject
+    url: jdbc:mysql://39.106.70.195:3306/myproject?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: mysql950303..
     type: com.alibaba.druid.pool.DruidDataSource  #阿里巴巴的连接池
@@ -23,7 +23,7 @@ eureka:
       defaultZone: http://39.106.70.195:7000/eureka  #后面必须加个eureka 才能注册上去。
 
   instance:
-    instance-id: blog-provider-80 #注册在eureka上的服务的实例的id
+    instance-id: blog-provider-8080 #注册在eureka上的服务的实例的id
     prefer-ip-address: true    #显示IP地址，方便查找
 info:
   app.name: blog-app
