--- a/blog/blog-provider/pom.xml
+++ b/blog/blog-provider/pom.xml
@@ -10,6 +10,17 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>blog-provider</artifactId>
     <packaging>jar</packaging>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>1.5.9.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
 
         <!--简化javabean开发的jar,用注解的方式快速写setter,getter,-->
@@ -66,11 +77,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.0.31</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.0</version>
         </dependency>
 
         <!--application.yml 文件的提示-->
