--- a/blog/blog-provider/src/main/resources/application.yml
+++ b/blog/blog-provider/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://39.106.70.195:3306/myproject?useUnicode=true&characterEncoding=UTF-8
-    username: root
-    password: mysql950303..
+    username: #
+    password: #
     type: com.alibaba.druid.pool.DruidDataSource  #阿里巴巴的连接池
     dbcp2:
       max-total: 5                                 #最大维持连接数
