--- a/blog/blog-provider/src/main/resources/bootstrap.yml
+++ b/blog/blog-provider/src/main/resources/bootstrap.yml
@@ -6,16 +6,17 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://39.106.70.195:3306/myproject?useUnicode=true&characterEncoding=UTF-8
-    username: #
-    password: #
+    username: *
+    password: *
     type: com.alibaba.druid.pool.DruidDataSource  #阿里巴巴的连接池
     dbcp2:
       max-total: 5                                 #最大维持连接数
       min-idle: 5                                   #最小维持连接数
       initial-size: 5                               #初始化大小
       max-wait-millis: 200                           #等待连接获取的最大等待时间
-  jpa:
-    show-sql: true
+#  jackson:
+#    date-format: yyyy-MM-dd HH:mm:ss
+#    time-zone: GMT+8
 
 eureka:
   client:
@@ -30,3 +31,10 @@ info:
   company.name: www.shemuel.top
   .artifactId: $project.artifactId$
   buibuildld.version: $project.version$
+mybatis:
+  config-location: classpath:mybatis/mybatis-config.xml
+  type-aliases-package: com.shemuel.mode
+  mapper-locations: classpath:mybatis/mappers/*.xml
+logging:
+  level:
+    com.shemuel.dao : debug
