--- a/vue/package.json
+++ b/vue/package.json
@@ -13,7 +13,15 @@
         "build": "node build/build.js"
     },
     "dependencies": {
-        "vue-components": "^2.0.0"
+        "hls.js": "^0.12.4",
+        "particles.js": "^2.0.0",
+        "showdown": "^1.9.0",
+        "vue-aplayer": "^1.6.1",
+        "vue-components": "^2.0.0",
+        "vue-float-action-button": "^0.6.0",
+        "vue-simplemde": "^0.5.1",
+        "vue-waterfall": "^1.0.6",
+        "vue-waterfall2": "^1.6.5"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
@@ -27,12 +35,12 @@
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
         "babel-plugin-transform-runtime": "^6.22.0",
         "babel-plugin-transform-vue-jsx": "^3.5.0",
-        "babel-preset-env": "^1.3.2",
-        "babel-preset-stage-2": "^6.22.0",
-        "babel-register": "^6.22.0",
         "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.3.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
+        "babel-preset-stage-2": "^6.22.0",
+        "babel-register": "^6.22.0",
         "chalk": "^2.0.1",
         "copy-webpack-plugin": "^4.0.1",
         "cross-spawn": "^5.0.1",
@@ -72,6 +80,7 @@
         "uglifyjs-webpack-plugin": "^1.1.1",
         "url-loader": "^1.1.2",
         "vue-jest": "^1.0.2",
+        "vue-particles": "^1.0.9",
         "vue-style-loader": "^3.0.1",
         "webpack": "^3.6.0",
         "webpack-bundle-analyzer": "^2.9.0",
