--- a/blog/blog-eureka/pom.xml
+++ b/blog/blog-eureka/pom.xml
@@ -14,6 +14,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka-server</artifactId><!--eureka 服务-->
+            <version>1.4.6.RELEASE</version>
         </dependency>
     </dependencies>
     <build>
