--- a/blog/blog-consumer/pom.xml
+++ b/blog/blog-consumer/pom.xml
@@ -11,6 +11,7 @@
     <packaging>jar</packaging>
     <artifactId>blog-consumer</artifactId>
     <dependencies>
+        <!--个人jar包-->
         <dependency>
             <groupId>com.shemuel</groupId>
             <artifactId>blog-api</artifactId>
@@ -20,6 +21,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -38,10 +45,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.33</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId><!--eureka组件，后面没带server,即为客户端client-->
-            <version>1.4.6.RELEASE</version>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.0.0.RELEASE</version>
         </dependency>
         <!--断路器-->
         <dependency>
@@ -54,6 +62,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+
+<!--        <dependency>
+            <groupId>org.apache.rabbitmq</groupId>
+            <artifactId>rabbitmq-all</artifactId>
+        </dependency>-->
         <!-- feign相关 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -65,6 +78,24 @@
             <artifactId>nekohtml</artifactId>
             <version>1.9.22</version>
         </dependency>
+
+<!--        <dependency>
+            <groupId>eomp-cloud</groupId>
+            <artifactId>eomp-cloud-webapp</artifactId>
+            <version>1.0.2</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>eomp-cloud</groupId>
+            <artifactId>eomp-cloud-webapp-support</artifactId>
+            <version>1.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-engine</artifactId>
+            <version>5.22.0</version>
+        </dependency>-->
     </dependencies>
     <build>
         <plugins>
