--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -57,6 +57,11 @@
                 <!--<scope>test</scope>-->
             <!--</dependency>-->
             <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-all</artifactId>
+                <version>5.15.9</version>
+            </dependency>
+            <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>1.2.15</version>
